=========================================================================
CHANGE LOG
=========================================================================

2007-05-24  Warren L. DeLano <warren@delsci.com>

	* subtle change to the behavior of "create": only atoms present in
	  the source state are added to the target object
	
	* discovered and corrected flaw in state-based selection handling
	
2007-05-20  Warren L. DeLano <warren@delsci.com>

	* adjusted performance, idle, and framerate measuring
	
2007-05-20  Warren L. DeLano <warren@delsci.com>

	* added global transparency sort
	
2007-05-16  Warren L. DeLano <warren@delsci.com>

	* fixed mpng export
	
	* cObjectDist now cObjectMeasurement (no C names/files renamed)
		
	* additional show/hide menu options for measurement objects
	
2007-05-16  Warren L. DeLano <warren@delsci.com>

	* fixed bug with selection modification menus
	
2007-05-14  Warren L. DeLano <warren@delsci.com>

	* fixed enable with selection-expression arguments
	
2007-05-10  Warren L. DeLano <warren@delsci.com>

	* added PyMOL_CmdCreate
	
2007-05-09  Warren L. DeLano <warren@delsci.com>

        * modified create to allow shifted multi-state object creation
	
2007-05-06  Warren L. DeLano <warren@delsci.com>

	* damage control galore... many bugs created, many bugs quashed.
	
2007-05-05  Warren L. DeLano <warren@delsci.com>

	* created some basic tests cases for use of multiple instances
	
	* support for multiple PyMOL instances now largely complete

2007-05-04  Warren L. DeLano <warren@delsci.com>

	* fixed various GUI annoyances
	
	* fixed scene insert before/after actions

	* fixed mpng command-line action

	* OVERHAULED the Python/C API to reduce global state

	* REFACTORED cmd.py into a number of new .py files

2007-05-03  Warren L. DeLano <warren@delsci.com>

	* converted parser to instance-based while retaining global use
	
	* continued work on PyMOL as a Python object
	
2007-05-01  Warren L. DeLano <warren@delsci.com>
