@@ -348,6 +348,25 @@ static void ObjectMeshInvalidate(ObjectMesh *I,int rep,int level,int state)
   }
 }
 
+int ObjectMeshGetLevel(ObjectMesh *I,int state, float *result)
+{
+  int ok=true;
+  ObjectMeshState *ms;
+  if(state>=I->NState) {
+    ok=false;
+  } else {
+    if(state<0) {
+      state = 0;
+    }
+    ms = I->State + state;
+    if(ms->Active && result) {
+      *result = ms->Level;
+    } else 
+      ok = false;
+  }
+  return(ok);
+}
+
 int ObjectMeshSetLevel(ObjectMesh *I,float level,int state)
 {
   int a;
