@@ -64,6 +64,7 @@ void ObjectSurfaceDump(ObjectSurface *I,char *fname,int state);
 int ObjectSurfaceNewFromPyList(PyMOLGlobals *G,PyObject *list,ObjectSurface **result);
 PyObject *ObjectSurfaceAsPyList(ObjectSurface *I);
 int ObjectSurfaceSetLevel(ObjectSurface *I,float level,int state);
+int ObjectSurfaceGetLevel(ObjectSurface *I,int state,float *result);
 int ObjectSurfaceInvalidateMapName(ObjectSurface *I,char *name);
 
 #endif
